# mav_trajectory_generation

./: .gitignore  README.md
docs/: conf.py  index.rst
docs/pages/: Time-Allocation.md
install/: mav_trajectory_generation.rosinstall  mav_trajectory_generation_https.rosinstall  mav_trajectory_generation_ssh.rosinstall
matlab/: test_feasibility_evaluation.m
matlab/functions/: feasibilityResultToString.m
mav_trajectory_generation/: CMakeLists.txt  package.xml
mav_trajectory_generation/include/mav_trajectory_generation/: convolution.h  extremum.h  io.h  motion_defines.h  polynomial.h  polynomial_optimization_linear.h  polynomial_optimization_nonlinear.h  rpoly.h  segment.h  squad_optimization.h  test_utils.h  timing.h  trajectory.h  trajectory_sampling.h  vertex.h  yaml_io.h
mav_trajectory_generation/include/mav_trajectory_generation/cpoly/: newr.h
mav_trajectory_generation/include/mav_trajectory_generation/impl/: polynomial_optimization_linear_impl.h  polynomial_optimization_nonlinear_impl.h  squad_optimization_impl.h  timing_impl.h  vertex_impl.h
mav_trajectory_generation/include/mav_trajectory_generation/rpoly/: rpoly_ak1.h
mav_trajectory_generation/include/mav_trajectory_generation/rpolyplusplus/: find_polynomial_roots_jenkins_traub.h  polynomial.h
mav_trajectory_generation/src/: io.cpp  motion_defines.cpp  polynomial.cpp  polynomial_timing_evaluation.cpp  rpoly.cpp  segment.cpp  timing.cpp  trajectory.cpp  trajectory_sampling.cpp  vertex.cpp  yaml_io.cpp
mav_trajectory_generation/src/cpoly/: cpoly.cpp  newr.cpp
mav_trajectory_generation/src/rpoly/: rpoly_ak1.cpp
mav_trajectory_generation/src/rpolyplusplus/: find_polynomial_roots_jenkins_traub.cpp  polynomial.cpp
mav_trajectory_generation/test/: test_polynomial.cpp  test_polynomial_optimization.cpp
mav_trajectory_generation_example/: CMakeLists.txt  Readme.md  package.xml
mav_trajectory_generation_example/cfg/: firefly_params.yaml  rviz_view.rviz  rviz_view_firefly.rviz  rviz_view_voliro.rviz  voliro_params.yaml
mav_trajectory_generation_example/include/mav_trajectory_generation_example/: example_planner.h
mav_trajectory_generation_example/launch/: example.launch  example_6dof.launch
mav_trajectory_generation_example/src/: example_planner.cc  example_planner_6dof.cc  example_planner_6dof_node.cc  example_planner_node.cc
mav_trajectory_generation_ros/: CMakeLists.txt  package.xml
mav_trajectory_generation_ros/include/mav_trajectory_generation_ros/: feasibility_analytic.h  feasibility_base.h  feasibility_recursive.h  feasibility_sampling.h  input_constraints.h  ros_conversions.h  ros_visualization.h  trajectory_sampler_node.h  trajectory_sampling.h  yaml_io.h
mav_trajectory_generation_ros/src/: feasibility_analytic.cpp  feasibility_base.cpp  feasibility_recursive.cpp  feasibility_sampling.cpp  input_constraints.cpp  ros_conversions.cpp  ros_visualization.cpp  time_evaluation_node.cpp  trajectory_sampler_node.cpp  trajectory_sampling.cpp  yaml_io.cpp
mav_trajectory_generation_ros/test/: test_feasibility.cpp
mav_visualization/: CMakeLists.txt  mainpage.dox  package.xml
mav_visualization/include/mav_visualization/: helpers.h  hexacopter_marker.h  leica_marker.h  marker_group.h
mav_visualization/meshes/: firefly_carbon.dae  firefly_cowl.dae
mav_visualization/src/: hexacopter_marker.cpp  hexacopter_publisher.cpp  leica_marker.cpp  leica_publisher.cpp  marker_group.cpp
